Fixed scrolling issue on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,6 @@
 body { 
     font-family: 'Readex Pro', sans-serif;
     margin: 0;
-    overflow: hidden;
 }
 
 .header {
